[pom] Move argline to properties and pick up item from parent
for some reason jacoco failed to run until this was done.